--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <canvas id="draw" width="480" height="360"/>
   </div>
   <script>
-    require("./drawer.js")
+    require("./paint.js")
   </script>
 </body>
